fix horizontal scroll

--- a/src/components/Settings/Accounts/Roles/Roles.module.scss
+++ b/src/components/Settings/Accounts/Roles/Roles.module.scss
@@ -186,3 +186,22 @@ $arrow-size: 21px;
   list-style: none;
   margin: 0;
 }
+
+.sidebarTitle {
+  color: #808f94;
+  font-family: 'Helvetica Neue Medium', sans-serif;
+  font-size: 14px;
+  font-weight: 500;
+  text-align: left;
+  padding-top: 10px;
+  padding-bottom: 5px;
+
+  &:first-child {
+    padding-top: 0;
+  }
+}
+
+.checkboxGroupWrapper {
+  height: 100%;
+  margin-top: 10px;
+}
